<resources>
    <string name="app_name">Application1</string>

    <string name="facebook_app_id">[APP_ID]</string>
    <string name="email">Email</string>
    <string name="motDePasse">Mot de passe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="inscription">S\'inscrire</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modifier_image">Modifier image</string>

</resources>
