<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.emili.application1.MainActivity">


    <EditText
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/nom"
        android:inputType="textEmailAddress"
        />


    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="80dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/prenom"
        android:inputType="textEmailAddress"
        />


    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="80dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/email"
        android:inputType="textEmailAddress"
       />

    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="80dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="240dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/motDePasse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/motDePasse"
        android:inputType="textPassword"
        />


    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="80dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/motDePasse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/motDePasse"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/inscription"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="140dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="360dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription" />
</android.support.constraint.ConstraintLayout>
