<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.emili.application1.UserActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="90dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/com_facebook_button_icon_blue" />

        <Button
            android:id="@+id/modif_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="210dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:text="@string/modifier_image"/>

    <TextView
        android:id="@+id/nom_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="90dp"
        style="@style/text_profil"/>


    <TextView
        android:id="@+id/prenom_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="240dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="90dp"
        style="@style/text_profil"/>


    <TextView
        android:id="@+id/email_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="90dp"
        style="@style/text_profil"/>


</android.support.constraint.ConstraintLayout>
